[package]
authors = ["Yuri Iozzelli <y.iozzelli@gmail.com>"]
name = "telegram-bot"
version = "0.1.0"

[dependencies]
error-chain = "0.10.0"
futures = "0.1"
serde = "*"
serde_derive = "*"
serde_json = "*"
tokio-core = "0.1"

[dependencies.hyper]
git = "https://github.com/hyperium/hyper"

[dependencies.hyper-tls]
git = "https://github.com/hyperium/hyper-tls"

[dev-dependencies.telegram-bot-api]
path = "../telegram-bot-api"
